--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "01-github-explorer",
+  "name": "javabank-react",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "author": "Fábio Alves <fabioalves.contacto@gmail.com>",
   "scripts": {
-    "dev": "webpack serve",
-    "build": "cross-env NODE_ENV=production webpack"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
     "@types/react-dom": "^17.0.0",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
     "node-sass": "^5.0.0",
-    "react-app-polyfill": "^2.0.0",
-    "react-refresh": "^0.9.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
